// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled text input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<input
  aria-invalid={false}
  aria-label="disabled text input"
  className="pf-c-form-control"
  disabled={true}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value={null}
/>
`;

exports[`invalid text input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<input
  aria-invalid={true}
  aria-label="invalid text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;

exports[`readonly text input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<input
  aria-invalid={false}
  aria-label="readonly text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={true}
  required={false}
  type="text"
  value="read only"
/>
`;

exports[`simple text input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<input
  aria-invalid={false}
  aria-label="simple text input"
  className="pf-c-form-control"
  disabled={false}
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="test input"
/>
`;
